RESOLVED FIXED320038
[Digital Credentials] Start to parsing OpenID4VP signed and multisigned requests in the web content process
https://bugs.webkit.org/show_bug.cgi?id=320038
Summary [Digital Credentials] Start to parsing OpenID4VP signed and multisigned reque...
pascoe@apple.com
Reported 2026-07-22 16:54:41 PDT
We need to completely parse these in web content, this patch is to start laying the machinery.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-07-22 16:54:47 PDT
pascoe@apple.com
Comment 2 2026-07-22 17:31:58 PDT
EWS
Comment 3 2026-07-28 09:35:52 PDT
Committed 318074@main (18ea1bb62856): <https://commits.webkit.org/318074@main> Reviewed commits have been landed. Closing PR #69990 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.